tests/cases/fail/super_no_base.p4
class Animal:
    name: str

    def label(self: Animal) -> str:
        return super().label()
